lab1/Test/L1-A-2-44.cmm
int iOrewRFnB_EDTEfyDQb ( ) float gs6OCipox ;
{
}}
struct {
  int o ;
}jZpL [ ] 
;
